gcc-14.2.0/libgo/misc/cgo/errors/testdata/issue42580.go
version https://git-lfs.github.com/spec/v1
oid sha256:4ea51c6c803b48e2b4f3ad9366d922c41cf4a7b79034e21251f78e0fc2adea73
size 1369
